--- a/language/resource.language.hr_hr/strings.po
+++ b/language/resource.language.hr_hr/strings.po
@@ -7,15 +7,15 @@ msgstr ""
 "Project-Id-Version: KODI Main\n"
 "Report-Msgid-Bugs-To: translations@kodi.tv\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2022-12-30 20:19+0000\n"
-"Last-Translator: gogogogi <trebelnik2@gmail.com>\n"
+"PO-Revision-Date: 2022-12-01 03:28+0000\n"
+"Last-Translator: Doktor-X <doktorxnetwork@gmail.com>\n"
 "Language-Team: Croatian <https://kodi.weblate.cloud/projects/kodi-add-ons-skins/skin-estuary/hr_hr/>\n"
 "Language: hr_hr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Weblate 4.15\n"
+"X-Generator: Weblate 4.14.2\n"
 
 msgctxt "Addon Summary"
 msgid "Estuary skin by phil65. (Kodi's default skin)"
@@ -39,7 +39,7 @@ msgstr "Pretaži..."
 
 msgctxt "#31002"
 msgid "Show media fanart as background"
-msgstr "Prikaži sliku omota medija kao pozadinu"
+msgstr "Prikaži fanart medija kao pozadinu"
 
 msgctxt "#31003"
 msgid "Cinema mode"
@@ -55,15 +55,15 @@ msgstr "Gledaj kao 2D"
 
 msgctxt "#31006"
 msgid "Random movies"
-msgstr "Naizmjenični filmovi"
+msgstr "Nasumični filmovi"
 
 msgctxt "#31007"
 msgid "Unwatched movies"
-msgstr "Neodgledani filmovi"
+msgstr "Nepogledani filmovi"
 
 msgctxt "#31008"
 msgid "Enable category widgets"
-msgstr "Omogući grafički element kategorija"
+msgstr "Omogući widget kategorija"
 
 msgctxt "#31009"
 msgid "Download icons"
@@ -79,11 +79,11 @@ msgstr "Najslušaniji albumi"
 
 msgctxt "#31012"
 msgid "Random albums"
-msgstr "Naizmjenični albumi"
+msgstr "Nasumični albumi"
 
 msgctxt "#31013"
 msgid "Random artists"
-msgstr "Naizmjenični izvođači"
+msgstr "Nasumični izvođači"
 
 msgctxt "#31014"
 msgid "Unplayed albums"
@@ -97,7 +97,7 @@ msgstr "Nedavne snimke"
 #. home screen channel widget: recently played tv channels. (please note that in some non-english languages #31018 and #31016 might not be equal)
 msgctxt "#31016"
 msgid "Recently played channels"
-msgstr "Nedavno gledani programi"
+msgstr "Nedavno reproducirani kanali"
 
 msgctxt "#31017"
 msgid "Rated"
@@ -106,7 +106,7 @@ msgstr "Ocijenjeno"
 #. home screen channel widget: recently played radio channels. (please note that in some non-english languages #31018 and #31016 might not be equal)
 msgctxt "#31018"
 msgid "Recently played channels"
-msgstr "Nedavno gledani programi"
+msgstr "Nedavno reproducirani kanali"
 
 msgctxt "#31019"
 msgid "Forecast"
@@ -134,7 +134,7 @@ msgstr "Odaberi prikaz ocjena za medijske stavke"
 
 msgctxt "#31025"
 msgid "No favourites found. You can add any item from media views to this list by using the context menu."
-msgstr "Nema pronađenih omiljenih. Možete dodati bilo koju stavku iz prikaza medija na ovaj popis pomoću sadržajnog izbornika."
+msgstr "Nema pronađenih favorita. Možete dodati bilo koju stavku iz prikaza medija na ovaj popis pomoću kontekstnog izbornika."
 
 msgctxt "#31026"
 msgid "Timeshift"
@@ -146,7 +146,7 @@ msgstr "Sljedeće emitiranje"
 
 msgctxt "#31028"
 msgid "Show fanart"
-msgstr "Prikaži postere obožavatelja"
+msgstr "Prikaži Ilustracije"
 
 msgctxt "#31029"
 msgid "Last logged in"
@@ -155,15 +155,15 @@ msgstr "Zadnja prijava"
 #. Label to show the system memory usage
 msgctxt "#31030"
 msgid "System memory usage"
-msgstr "Korištenje memorije"
+msgstr "Upotreba memorije sustava"
 
 msgctxt "#31031"
 msgid "Version info"
-msgstr "Informacije inačice"
+msgstr "Informacije o verziji"
 
 msgctxt "#31032"
 msgid "Order"
-msgstr "Razvrstaj"
+msgstr "Poredaj"
 
 msgctxt "#31033"
 msgid "Your rating"
@@ -179,7 +179,7 @@ msgstr "Stranice"
 
 msgctxt "#31036"
 msgid "items"
-msgstr "stavke"
+msgstr "stavka"
 
 msgctxt "#31037"
 msgid "Selected track"
@@ -199,7 +199,7 @@ msgstr "Proizvođač kamere"
 
 msgctxt "#31042"
 msgid "Playlist options"
-msgstr "Mogućnosti popisa izvođenja"
+msgstr "Opcije popisa za reprodukciju"
 
 msgctxt "#31043"
 msgid "Set the type and add rules to create a smart playlist. These playlists are dynamic and include all media items from your database which apply to your chosen rules."
@@ -239,11 +239,11 @@ msgstr "Pritisnite [B]Desno[/B] za napredovanje kadra"
 
 msgctxt "#31056"
 msgid "Go to playlist"
-msgstr "Idi na popis izvođenja"
+msgstr "Idi na popis za reprodukciju"
 
 msgctxt "#31057"
 msgid "Show login screen on startup"
-msgstr "Prikaži zaslon prijave pri pokretanju"
+msgstr "Prikaži zaslon za prijavu pri pokretanju"
 
 msgctxt "#31058"
 msgid "Automatic Login on startup"
@@ -263,31 +263,31 @@ msgstr "Stavke glavnog izbornika"
 
 msgctxt "#31062"
 msgid "Choose weather fanart pack"
-msgstr "Odaberite paket korisničkih slika za vrijeme"
+msgstr "Odaberite fanart paket za vrijeme"
 
 msgctxt "#31063"
 msgid "Sections"
-msgstr "Odjeljci"
+msgstr "Sekcije"
 
 msgctxt "#31065"
 msgid "Video playlist"
-msgstr "Video popis izvođenja"
+msgstr "Popis za reprodukciju videozapisa"
 
 msgctxt "#31066"
 msgid "Music playlist"
-msgstr "Glazbeni popis izvođenja"
+msgstr "Glazbena lista za reprodukciju"
 
 msgctxt "#31067"
 msgid "Event log"
-msgstr "Zapis događaja"
+msgstr "Dnevnik događaja"
 
 msgctxt "#31068"
 msgid "Choose presets"
-msgstr "Odaberite predloške"
+msgstr "Odaberite unaprijed postavljene postavke"
 
 msgctxt "#31069"
 msgid "Last Updated"
-msgstr "Zadnja nadopuna"
+msgstr "Zadnje ažurirano"
 
 msgctxt "#31071"
 msgid "by"
@@ -295,7 +295,7 @@ msgstr "od"
 
 msgctxt "#31072"
 msgid "Power Options"
-msgstr "Mogućnosti energije"
+msgstr "Mogućnosti napajanja"
 
 msgctxt "#31073"
 msgid "Total length"
@@ -307,11 +307,11 @@ msgstr "Ukupno trajanje"
 
 msgctxt "#31075"
 msgid "Movie sets"
-msgstr "Filmski set"
+msgstr "Filmski setovi"
 
 msgctxt "#31079"
 msgid "Cast not available"
-msgstr "Glumačka postava nedostupna"
+msgstr "Glumačka postava nije dostupna"
 
 msgctxt "#31080"
 msgid "Ends at"
@@ -319,7 +319,7 @@ msgstr "Završava u"
 
 msgctxt "#31082"
 msgid "Lyrics add-on"
-msgstr "Dodatak tekstova pjesama"
+msgstr "Dodatak za tekstova pjesama"
 
 msgctxt "#31083"
 msgid "Lyrics add-on settings"
@@ -351,7 +351,7 @@ msgstr "Lokalni podnaslovi dostupni"
 
 msgctxt "#31097"
 msgid "Channel options"
-msgstr "Mogućnosti programa"
+msgstr "Opcije kanala"
 
 msgctxt "#31098"
 msgid "Select your Kodi user profile[CR]to login and continue"
@@ -379,7 +379,7 @@ msgstr "Zid"
 
 msgctxt "#31103"
 msgid "Enter text here..."
-msgstr "Upišite tekst ovdje..."
+msgstr "Unesite tekst ovdje..."
 
 msgctxt "#31104"
 msgid "Your library is currently empty. In order to populate it with your personal media, enter \"Files\" section, add a media source and configure it. After the source has been added and indexed you will be able to browse your library."
@@ -480,7 +480,7 @@ msgstr "Postavke glavnog izbornika: Prilagodite početni zaslon svojim potrebama
 
 msgctxt "#31131"
 msgid "Choose skin fanart pack"
-msgstr "Odaberite paket slika korisnika za presvlaku"
+msgstr "Odaberite fanart paket za skin"
 
 msgctxt "#31132"
 msgid "Select Program"
@@ -500,7 +500,7 @@ msgstr "Binarni"
 
 msgctxt "#31136"
 msgid "Click here to see latest changes..."
-msgstr "Kliknite ovdje za prikaz najnovijih promjena..."
+msgstr "Pritisnite ovdje kako bi vidjeli najnovije promjene..."
 
 #. Label to show PVR info page
 msgctxt "#31137"
@@ -536,7 +536,7 @@ msgstr "Još niste postavili PVR. Kako biste koristili PVR, odaberite dodatak PV
 
 msgctxt "#31144"
 msgid "Enter add-on browser"
-msgstr "Otvori preglednik dodataka"
+msgstr "Otvori pregled dodataka"
 
 msgctxt "#31145"
 msgid "Search add-ons"
@@ -556,19 +556,19 @@ msgstr "Kategorije"
 
 msgctxt "#31149"
 msgid "Select genre fanart pack"
-msgstr "Odaberite paket slika obožavatelja za žanrove"
+msgstr "Odaberite fanart paket za žanrove"
 
 msgctxt "#31150"
 msgid "Origin"
-msgstr "Izvor"
+msgstr "Podrijetlo"
 
 msgctxt "#31151"
 msgid "Unwatched music videos"
-msgstr "Neodgledani glazbeni spotovi"
+msgstr "Nepogledani glazbeni spotovi"
 
 msgctxt "#31152"
 msgid "Random music videos"
-msgstr "Naizmjenični glazbeni spotovi"
+msgstr "Nasumični glazbeni spotovi"
 
 msgctxt "#31153"
 msgid "You do not have any add-ons of this type installed. Enter the add-on browser to download add-ons created by our community."
@@ -596,7 +596,7 @@ msgstr "Način rada na dodir"
 
 msgctxt "#31159"
 msgid "Artwork"
-msgstr "Slike omota"
+msgstr "Ilustracije"
 
 msgctxt "#31160"
 msgid "Show media flags"
@@ -612,7 +612,7 @@ msgstr "Igrajte svoje igre ili preuzmite jedan od mnogih dodataka za igre iz slu
 
 msgctxt "#31163"
 msgid "Show Fanart background"
-msgstr "Prikaži sliku omota kao pozadinu"
+msgstr "Prikaži fanart kao pozadinu"
 
 #. Choose profile identifier
 msgctxt "#31164"
@@ -637,17 +637,17 @@ msgstr "Animiraj pozadinu"
 #. Label of a setting
 msgctxt "#31168"
 msgid "Show posters instead of thumbs for musicvideos"
-msgstr "Pokaži postere umjesto minijatura za glazbene spotove"
+msgstr "Pokaži postere umjesto sličica za videospotove"
 
 #. Description label for skin settings area
 msgctxt "#31169"
 msgid "Artwork related settings."
-msgstr "Postavke povezane slikama omota."
+msgstr "Postavke vezane za Ilustracije."
 
 #. Label for OSD settings category
 msgctxt "#31170"
 msgid "On screen display"
-msgstr "Prikaz na zaslonu"
+msgstr "Prikaz na ekranu"
 
 #. Helper text for the label of OSD settings category
 msgctxt "#31171"
@@ -667,17 +667,17 @@ msgstr "Vrijeme automatskog zatvaranja video OSD-a (sekunde)"
 #. Setting to control what happens when clicking a music album on the home screen
 msgctxt "#31174"
 msgid "Default select action for albums on the home screen"
-msgstr "Zadana radnja odabira albuma na početnom zaslonu"
+msgstr "Zadana radnja odabira za albume na početnom zaslonu"
 
 #. Setting to control what happens when clicking a TV show on the home screen
 msgctxt "#31175"
 msgid "Default select action for TV shows on the home screen"
-msgstr "Zadana radnja odabira TV serija na početnom zaslonu"
+msgstr "Zadani odabir radnje za TV emisije na početnom zaslonu"
 
 #. Setting to control what happens when clicking a movie set on the home screen
 msgctxt "#31176"
 msgid "Default select action for movie sets on the home screen"
-msgstr "Zadana radnja odabira filmskih kolekcija na početnom zaslonu"
+msgstr "Zadana radnja odabira za setove filmova na početnom zaslonu"
 
 # empty strings from id 31170 to 31599
 #. Label to show the video codec name
@@ -698,7 +698,7 @@ msgstr "Omjer slike"
 #. Label to show the video bitrate
 msgctxt "#31603"
 msgid "Video bitrate"
-msgstr "Brzina prijenosa slike"
+msgstr "Bitrate videozapisa"
 
 #. Label to show the audio codec name
 msgctxt "#31604"
@@ -708,12 +708,12 @@ msgstr "Zvučni kôdek"
 #. Label to show the number of audio channels
 msgctxt "#31605"
 msgid "Audio channels"
-msgstr "Zvučni kanali"
+msgstr "Broj zvučnih kanala"
 
 #. Label to show the audio bitrate
 msgctxt "#31606"
 msgid "Audio bitrate"
-msgstr "Brzina prijenosa zvuka"
+msgstr "Birate zvuka"
 
 #. Label to show the screen resolution
 msgctxt "#31607"
@@ -723,7 +723,7 @@ msgstr "Razlučivost zaslona"
 #. Label to show the system rendering speed
 msgctxt "#31608"
 msgid "System rendering speed"
-msgstr "Brzina prikaza sustava"
+msgstr "Brzina renderiranja sustava"
 
 #. Label to show the system CPU usage
 msgctxt "#31609"
