--- a/language/resource.language.it_it/strings.po
+++ b/language/resource.language.it_it/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: KODI Main\n"
 "Report-Msgid-Bugs-To: translations@kodi.tv\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2023-03-26 07:48+0000\n"
+"PO-Revision-Date: 2022-11-25 22:40+0000\n"
 "Last-Translator: Massimo Pissarello <mapi68@gmail.com>\n"
 "Language-Team: Italian <https://kodi.weblate.cloud/projects/kodi-add-ons-skins/skin-estuary/it_it/>\n"
 "Language: it_it\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.15.2\n"
+"X-Generator: Weblate 4.14.2\n"
 
 msgctxt "Addon Summary"
 msgid "Estuary skin by phil65. (Kodi's default skin)"
@@ -31,7 +31,7 @@ msgstr "Estuary è la skin predefinita di Kodi, rimuoverla potrebbe causare prob
 
 msgctxt "#31000"
 msgid "Now playing"
-msgstr "Ora in riproduzione"
+msgstr "In riproduzione"
 
 msgctxt "#31001"
 msgid "Search..."
@@ -71,7 +71,7 @@ msgstr "Scarica icone"
 
 msgctxt "#31010"
 msgid "In progress movies"
-msgstr "Film in corso"
+msgstr "Film non terminati"
 
 msgctxt "#31011"
 msgid "Most played albums"
@@ -163,7 +163,7 @@ msgstr "Informazioni sulla versione"
 
 msgctxt "#31032"
 msgid "Order"
-msgstr "Ordinamento"
+msgstr "Ordina"
 
 msgctxt "#31033"
 msgid "Your rating"
@@ -187,7 +187,7 @@ msgstr "Traccia selezionata"
 
 msgctxt "#31038"
 msgid "Rewind"
-msgstr "Indietro veloce"
+msgstr "Indietro"
 
 msgctxt "#31039"
 msgid "Fast forward"
@@ -283,7 +283,7 @@ msgstr "Registro eventi"
 
 msgctxt "#31068"
 msgid "Choose presets"
-msgstr "Scegli preimpostazioni"
+msgstr "Scegli predefiniti"
 
 msgctxt "#31069"
 msgid "Last Updated"
@@ -295,7 +295,7 @@ msgstr "da"
 
 msgctxt "#31072"
 msgid "Power Options"
-msgstr "Opzioni spegnimento"
+msgstr "Opzioni alimentazione"
 
 msgctxt "#31073"
 msgid "Total length"
@@ -307,7 +307,7 @@ msgstr "Durata totale"
 
 msgctxt "#31075"
 msgid "Movie sets"
-msgstr "Saghe cinematografiche"
+msgstr "Raccolte di film"
 
 msgctxt "#31079"
 msgid "Cast not available"
@@ -351,11 +351,11 @@ msgstr "Sottotitoli locali disponibili"
 
 msgctxt "#31097"
 msgid "Channel options"
-msgstr "Opzioni canale"
+msgstr "Opzioni canali"
 
 msgctxt "#31098"
 msgid "Select your Kodi user profile[CR]to login and continue"
-msgstr "Seleziona il tuo profilo utente Kodi[CR]per accedere e continuare"
+msgstr "Selezionare il proprio profilo utente di Kodi[CR]per accedere e proseguire"
 
 #. viewtype name
 msgctxt "#31099"
@@ -365,7 +365,7 @@ msgstr "Muro di icone"
 #. viewtype name
 msgctxt "#31100"
 msgid "Shift"
-msgstr "Shift"
+msgstr "Spostamento"
 
 #. viewtype name
 msgctxt "#31101"
@@ -379,7 +379,7 @@ msgstr "Muro"
 
 msgctxt "#31103"
 msgid "Enter text here..."
-msgstr "Inserisci il testo qui..."
+msgstr "Inserire il testo qui..."
 
 msgctxt "#31104"
 msgid "Your library is currently empty. In order to populate it with your personal media, enter \"Files\" section, add a media source and configure it. After the source has been added and indexed you will be able to browse your library."
@@ -396,7 +396,7 @@ msgstr "Televideo"
 #. viewtype name
 msgctxt "#31107"
 msgid "WideList"
-msgstr "Elenco ampio"
+msgstr "Lista ampia"
 
 msgctxt "#31110"
 msgid "Enter files section"
@@ -404,7 +404,7 @@ msgstr "Entra a sfogliare i file"
 
 msgctxt "#31111"
 msgid "View your personal pictures or download one of the many image add-ons from the official repository."
-msgstr "Vedi le tue immagini personali o scarica uno dei tanti add-on immagini dal repository ufficiale."
+msgstr "Vedi le tue immagini personali o scarica uno dei tanti Add-on immagini dal repository ufficiale."
 
 msgctxt "#31112"
 msgid "Toggle audio stream"
@@ -612,12 +612,12 @@ msgstr "Gioca ai tuoi giochi personali o scarica uno dei tanti add-on di giochi 
 
 msgctxt "#31163"
 msgid "Show Fanart background"
-msgstr "Mostra sfondo fanart"
+msgstr "Mostra sfondo Fanart"
 
 #. Choose profile identifier
 msgctxt "#31164"
 msgid "Choose kind of profile identification"
-msgstr "Scegli tipo di identificazione del profilo"
+msgstr "Scegli il tipo di identificazione del profilo"
 
 #. Label for the kind of profile identification
 msgctxt "#31165"
@@ -677,7 +677,7 @@ msgstr "Azione di selezione predefinita per le serie TV nella schermata iniziale
 #. Setting to control what happens when clicking a movie set on the home screen
 msgctxt "#31176"
 msgid "Default select action for movie sets on the home screen"
-msgstr "Azione di selezione predefinita per le saghe cinematografiche nella schermata iniziale"
+msgstr "Azione di selezione predefinita per i set cinematografici nella schermata iniziale"
 
 # empty strings from id 31170 to 31599
 #. Label to show the video codec name
