--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -933,3 +933,7 @@ msgstr ""
 msgctxt "#32100"
 msgid "Show backdrop on pause"
 msgstr ""
+
+msgctxt "#32101"
+msgid "Show Restart Kodi option in exit menu"
+msgstr ""
