Make Restart Kodi exit option optional (disabled by default)

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -921,3 +921,11 @@ msgstr ""
 msgctxt "#31611"
 msgid "System"
 msgstr ""
+
+msgctxt "#32100"
+msgid "Show backdrop on pause"
+msgstr ""
+
+msgctxt "#32101"
+msgid "Show Restart Kodi option in exit menu"
+msgstr ""
